analyzer/tests/snapshots/errors__non_bool_and.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: binary op `and` operands must have type `bool`
  ┌─ [snippet]:5:13
  │
5 │   x = x and y
  │             ^ this has type `u256`; expected `bool`


