analyzer/tests/snapshots/errors__non_bool_or.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: binary op `or` operands must have type `bool`
  ┌─ [snippet]:5:12
  │
5 │   x = x or y
  │            ^ this has type `u256`; expected `bool`


