analyzer/tests/snapshots/errors__overflow_i256_pos.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src_str)"

---
error: literal out of range for `i256`
  ┌─ [snippet]:3:8
  │
3 │   i256(57896044618658097711785492504343953926634992332820282019728792003956564819968)
  │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ does not fit into type `i256`


