analyzer/tests/snapshots/errors__overflow_i32_neg.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src_str)"

---
error: literal out of range for `i32`
  ┌─ [snippet]:3:7
  │
3 │   i32(-2147483649)
  │       ^^^^^^^^^^^ does not fit into type `i32`


